--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,8 +82,8 @@
     </div>
   </div>
 
-  <link rel="stylesheet" href="./style.css" />
-  <script src="./script.js"></script>
-  <script src="./script2.js"></script>
+  <link rel="stylesheet" href="./style.css?v=1" />
+  <script src="./script.js?v=1"></script>
+  <script src="./script2.js?v=1"></script>
 </body>
 </html>
