--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
   <title>Three.js First-Person Room</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
@@ -82,8 +85,8 @@
     </div>
   </div>
 
-  <link rel="stylesheet" href="./style.css?v=2" />
-  <script src="./script.js?v=2"></script>
-  <script src="./script2.js?v=2"></script>
+  <link rel="stylesheet" href="./style.css?v=3" />
+  <script src="./script.js?v=3"></script>
+  <script src="./script2.js?v=3"></script>
 </body>
 </html>
