--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,7 +30,7 @@
 <body>
   <canvas id="canvas"></canvas>
 
-  <div id="paintWindow" class="win hidden-init">
+  <div id="paintWindow" class="win">
     <div class="titlebar">
       <div class="title-left">
         <div class="icon-sq"></div>
@@ -86,6 +86,9 @@
   </div>
 
   <link rel="stylesheet" href="./style.css?v=3" />
+  <script src="https://unpkg.com/three@0.148.0/build/three.min.js"></script>
+  <script src="https://unpkg.com/three@0.148.0/examples/js/loaders/GLTFLoader.js"></script>
   <script src="./script.js?v=3"></script>
+  <script src="./script2.js?v=3"></script>
 </body>
 </html>
