Hide paintWindow by default, fix GLB asset path

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,7 +30,7 @@
 <body>
   <canvas id="canvas"></canvas>
 
-  <div id="paintWindow" class="win">
+  <div id="paintWindow" class="win hidden-init">
     <div class="titlebar">
       <div class="title-left">
         <div class="icon-sq"></div>
