--- a/frontend/index.html
+++ b/frontend/index.html
@@ -86,8 +86,8 @@
   </div>
 
   <link rel="stylesheet" href="./style.css?v=3" />
-  <script src="https://unpkg.com/three@0.148.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.148.0/examples/js/loaders/GLTFLoader.js"></script>
+  <script async src="https://cdn.jsdelivr.net/npm/three@r128/build/three.min.js"></script>
+  <script async src="https://cdn.jsdelivr.net/npm/three@r128/examples/js/loaders/GLTFLoader.js"></script>
   <script src="./script.js?v=3"></script>
   <script src="./script2.js?v=3"></script>
 </body>
