Switch to unpkg CDN and add visible loading/error messages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,6 +28,14 @@
   </style>
 </head>
 <body>
+  <div id="loadingMessage" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: #333; color: #fff; padding: 20px; border-radius: 8px; z-index: 9999;">
+    Loading...
+  </div>
+  <script>
+    window.addEventListener('error', (e) => {
+      document.getElementById('loadingMessage').textContent = 'Error: ' + e.message;
+    });
+  </script>
   <canvas id="canvas"></canvas>
 
   <div id="paintWindow" class="win hidden-init">
@@ -86,8 +94,8 @@
   </div>
 
   <link rel="stylesheet" href="./style.css?v=3" />
-  <script src="https://cdn.jsdelivr.net/npm/three@r128/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@r128/examples/js/loaders/GLTFLoader.js"></script>
+  <script src="https://unpkg.com/three@latest/build/three.js"></script>
+  <script src="https://unpkg.com/three@latest/examples/js/loaders/GLTFLoader.js"></script>
   <script src="./script.js?v=3"></script>
   <script src="./script2.js?v=3"></script>
 </body>
