--- a/frontend/index.html
+++ b/frontend/index.html
@@ -86,8 +86,8 @@
   </div>
 
   <link rel="stylesheet" href="./style.css?v=3" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/GLTFLoader.min.js"></script>
+  <script src="https://unpkg.com/three@0.128.0/build/three.js"></script>
+  <script src="https://unpkg.com/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
   <script src="./script.js?v=3"></script>
   <script src="./script2.js?v=3"></script>
 </body>
