--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
-  <title>Three.js First-Person Room</title>
+  <title>we are in a soup</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
     html, body {
