Redesign intro screen with pistachio/chocolate brown palette and new serif typography

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,14 +44,13 @@
   <div id="introOverlay" class="intro-overlay">
     <div class="intro-content">
       <div class="intro-inner">
-        <h1>we are in a soup</h1>
-        <div class="intro-tagline">a tiny 3d place for soup painting</div>
+        <h1 class="intro-title"><em>we are in a soup</em></h1>
+        <div class="intro-tagline">a student run community kitchen reminding you to slow down.</div>
         <div class="intro-instructions">
-          <p>• Use <strong>WASD</strong> to move around</p>
-          <p>• Move the mouse to look around</p>
-          <p>• Click on objects for fun !!!!</p>
+          <p>click to explore.</p>
+          <p style="font-size: 0.9em; margin-top: 20px;">hint : click on objects. they may lead you somewhere.</p>
         </div>
-        <button id="startButton" class="start-button">start exploring</button>
+        <button id="startButton" class="start-button">→</button>
       </div>
     </div>
   </div>
