Update worry box title to 'holding space'

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -168,7 +168,7 @@
   <!-- Worry Box Window -->
   <div id="worryWindow" class="win worry-window hidden-init" style="position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%); width: 600px; z-index: 10000;">
     <div class="titlebar" style="background: #f5f0e8; border-bottom: 2px solid #d4a574; padding: 8px 12px; cursor: move;">
-      <span style="flex: 1; font-family: 'Segoe Print', 'Comic Sans MS', cursive; font-weight: bold; font-size: 14px;">worry box 📝</span>
+      <span style="flex: 1; font-family: 'Segoe Print', 'Comic Sans MS', cursive; font-weight: bold; font-size: 14px;">holding space</span>
       <button class="tbtn" id="worryMinBtn" title="Minimize" style="cursor: pointer;">_</button>
       <button class="tbtn" id="worryMaxBtn" title="Maximize" style="cursor: pointer;">□</button>
       <button class="tbtn" id="worryCloseBtn" title="Close" style="cursor: pointer;">✕</button>
