--- a/frontend/index.html
+++ b/frontend/index.html
@@ -199,6 +199,7 @@
   <link rel="stylesheet" href="./style.css?v=3" />
   <script src="https://unpkg.com/three@0.128.0/build/three.js"></script>
   <script src="https://unpkg.com/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+  <script src="https://unpkg.com/gif.js@0.2.0/dist/gif.js"></script>
   <script src="./script.js?v=3"></script>
   <script src="./script2.js?v=3"></script>
 </body>
