Update lighting to soft yellow, fix dialogue system, reposition kitchen box, replace orb with wall glow, update stats with image text, limit suggestions

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
   <canvas id="canvas"></canvas>
 
   <!-- Proximity Dialogue Tooltip -->
-  <div id="proximityDialogue" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: rgba(0,0,0,0.8); color: white; padding: 20px 30px; border-radius: 10px; font-size: 1.2em; font-style: italic; pointer-events: none; opacity: 0; transition: opacity 0.3s; z-index: 5000; text-align: center; max-width: 400px;"></div>
+  <div id="proximityDialogue" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; font-size: 2em; font-weight: bold; pointer-events: none; opacity: 0; transition: opacity 0.3s; z-index: 5000; text-align: center; text-shadow: 2px 2px 4px rgba(0,0,0,0.8);"></div>
 
   <!-- Table Visit Progress Overlay -->
   <div id="tableProgressOverlay" class="table-progress-overlay">
@@ -40,7 +40,7 @@
     <div class="progress-bar-small">
       <div id="tableProgressBar" class="progress-fill-small" style="width: 0%"></div>
     </div>
-    <div id="tableProgressText" class="progress-text-small">0 / 2 tables visited</div>
+    <div id="tableProgressText" class="progress-text-small">0 / 4 tables visited</div>
   </div>
 
   <!-- Fade to Black Overlay -->
