Update lighting to soft yellow, change floor to pastel green, fix dialogue display, reposition kitchen box, add to progress tracking

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
   <canvas id="canvas"></canvas>
 
   <!-- Proximity Dialogue Tooltip -->
-  <div id="proximityDialogue" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; font-size: 2em; font-weight: bold; pointer-events: none; opacity: 0; transition: opacity 0.3s; z-index: 5000; text-align: center; text-shadow: 2px 2px 4px rgba(0,0,0,0.8);"></div>
+  <div id="proximityDialogue" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; font-size: 2em; font-weight: bold; pointer-events: none; opacity: 0; transition: opacity 0.3s; z-index: 5000; text-align: center; text-shadow: 2px 2px 4px rgba(0,0,0,0.8), -2px -2px 4px rgba(0,0,0,0.8), 2px -2px 4px rgba(0,0,0,0.8), -2px 2px 4px rgba(0,0,0,0.8);"></div>
 
   <!-- Table Visit Progress Overlay -->
   <div id="tableProgressOverlay" class="table-progress-overlay">
