--- a/frontend/index.html
+++ b/frontend/index.html
@@ -220,6 +220,19 @@
     </div>
   </div>
 
+  <!-- Video Player Overlay -->
+  <div id="videoOverlay" class="video-overlay" style="display: none;">
+    <div class="video-container">
+      <iframe id="wallVideo" width="960" height="540" 
+        src="https://www.youtube.com/embed/9XHl9muZctk?enablejsapi=1&controls=1&modestbranding=1" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen>
+      </iframe>
+      <button id="closeVideo" class="close-video-btn">×</button>
+    </div>
+  </div>
+
   <link rel="stylesheet" href="./style.css?v=3" />
   <script src="https://unpkg.com/three@0.128.0/build/three.js"></script>
   <script src="https://unpkg.com/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
